Corrigindo CorsFilter e extraindo valor de origem permitida para o arquivo properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+algamoney.origemPermitida=http://localhost:4200
+
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
@@ -9,3 +11,4 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
 
 spring.profiles.active=oauth-security
+
