--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,13 @@
 algamoney.seguranca.enable-https=true
 algamoney.origemPermitida=http://localhost:4200
 
-spring.datasource.url={JDBC_DATABASE_URL}
-spring.datasource.username={JDBC_DATABASE_USERNAME}
-spring.datasource.password={JDBC_DATABASE_PASSWORD}
+#spring.datasource.url={JDBC_DATABASE_URL}
+#spring.datasource.username={JDBC_DATABASE_USERNAME}
+#spring.datasource.password={JDBC_DATABASE_PASSWORD}
+
+spring.datasource.url=jdbc:mysql://y2w3wxldca8enczv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/f2dyrwtkif99czbu
+spring.datasource.username=p7iu565wt8vobcuq
+spring.datasource.password=kd8kk1ss5ihkz6vn
 
 spring.profiles.active=oauth-security
+
