--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 algamoney.seguranca.enable-https=true
 algamoney.origemPermitida=http://localhost:4200
 
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net:3306/heroku_fba7e61b6236402?reconnect=true
-spring.datasource.username=bdbc86ff0c3fe0
-spring.datasource.password=5d59941c
+spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USERNAME}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 spring.profiles.active=oauth-security
 
