Alterando a propriedade de origem permitida nas configurações de produção

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 algamoney.seguranca.enable-https=true
-algamoney.origemPermitida=http://localhost:4200
+algamoney.origemPermitida=https://app-algamoney.herokuapp.com
 
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
